--- a/P03-creaElementosDesdeJs/practica/css/style.css
+++ b/P03-creaElementosDesdeJs/practica/css/style.css
@@ -1,9 +1,15 @@
-/** @format */
-
 *,
 *::after,
 *::before {
 	box-sizing: border-box;
+}
+html{
+	font-size: 1rem;
+}
+@media screen and (min-width: 600px){
+	html{
+		font-size: 0.8125rem;
+	}	
 }
 body {
 	width: 100%;
@@ -13,13 +19,13 @@ body {
 }
 .title {
 	text-align: center;
-	margin-top: 20px;
+	margin-top: 1.25rem;
 	font-size: 2.5rem;
 }
 .contentMain {
 	width: 100%;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-left: 0.625rem;
+	padding-right: 0.625rem;
 }
 .contentMain__header {
 	width: 80%;
@@ -31,16 +37,16 @@ body {
 	flex-wrap: wrap;
 }
 .card {
-	width: 200px;
+	width: 12.5rem;
 	height: auto;
 	color: #333;
 	background-color: #fff;
-	border-radius: 10px;
-	border: 1px solid #333;
-	padding: 10px;
+	border-radius: 0.625rem;
+	border: 0.0625rem solid #333;
+	padding: 0.625rem;
 	display: grid;
 	place-items: center;
-	margin-bottom: 20px;
+	margin-bottom: 1.25rem;
 }
 .card__title {
 	margin-top: 0;
@@ -48,19 +54,21 @@ body {
 }
 .card__btn {
 	width: 80%;
-	padding-top: 15px;
-	padding-bottom: 15px;
+	padding-top: 0.9375rem;
+	padding-bottom: 0.9375rem;
 	text-align: center;
-	background-color: blue;
-	color: #fff;
-	border: 2px solid rgba(0, 0, 255, 0.5);
-	border-radius: 10px;
+	color: blue;
+	border: 0.125rem solid rgba(0, 0, 255, 0.5);
+	border-radius: 0.625rem;
 	cursor: pointer;
 	font-size: 1.2rem;
 }
+.card__btn:active{
+	background-color: blue;
+	color: #fff;
+}
 .card__btn:hover {
-	border: 2px solid blue;
-	background-color: rgb(34, 34, 214);
+	border: 0.125rem solid blue;
 }
 .lista {
 	width: 100%;
@@ -73,31 +81,30 @@ body {
 	width: 100%;
 	list-style: none;
 	padding: 0;
-  padding-top: 10px;
-	padding-bottom: 10px;
-  
+  padding-top: 0.625rem;
+	padding-bottom: 0.625rem;
 }
-
 .liProduct {
-	width: 100%;
-	border: 1px solid #fff;
-	border-radius: 10px;
-	padding: 10px;
+	font-size: 16px;
+	border: 0.0625rem solid #fff;
+	border-radius: 0.625rem;
+	padding: 0.625rem;
 	font-size: 1.2rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	margin: 0 auto;
-margin-bottom: 10px;
+margin-bottom: 0.625rem;
 }
 @media screen and (min-width: 768px) {
 	.liProduct {
 		width: 50%;
+	
 	}
 }
 .liProduct__amount {
-	width: 40px;
-	height: 40px;
+	width: 2.5rem;
+	height: 2.5rem;
 	display: grid;
 	place-items: center;
 	background-color: blue;
