--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,29 @@ body {
 	margin-top: 5px;
 	text-align: center;
 }
+.alert {
+	width: 90%;
+	height: 40px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+	border-radius: 5px;
+	border: 2px solid #ff745b;
+	background-color: #ff6347;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
+.alert--show {
+	display: flex;
+}
+.alert__text {
+	margin: 0;
+	color: #fff;
+}
 .form {
 	width: 100%;
-	height: 200px;
+	min-height: 200px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
